--- a/webserver/views/output/item_list.html
+++ b/webserver/views/output/item_list.html
@@ -9,8 +9,8 @@
         <div class="list-box">
             <form action="/output/ongoing" method="post">
                 <div class="list-top">
-                    <p class="title">귀하의 호수</p>
-                    <div id="address"><p class="value"></p></div>
+                    <p class="title">물품리스트</p>
+                    <div id="owner_info"><p class="value"></p></div>
                 </div>
                 <div class="list-tbl-wrap">
                     <table class="list-tbl">
@@ -46,14 +46,17 @@
 
 <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const address = urlParams.get('address');
+   
+    if(urlParams.has('address')){
+        const address = urlParams.get('address');
 
-    data = `<p class="value">${address}호</p>`;
+        data = `<p class="value">${address}호</p>`;
 
-    $('#address').html(data);
+        $('#owner_info').html(data);
+        
 
-    // db에서 유저 호수와 택배 리스트 가져오기
-    axios.get('/output/get_item_list?address=' + address)
+        // db에서 유저 호수와 택배 리스트 가져오기
+        axios.get('/output/get_item_list?address=' + address)
         .then(axiosResult => {
             let itemListResponses = axiosResult.data.data;
             let tr = '';
@@ -77,6 +80,38 @@
         .catch(err => {
             console.error(err)
         });
+    } else{
+        const tracking_num = urlParams.get('tracking_num');
+
+        data = `<p class="value">${tracking_num}</p>`;
+
+        $('#owner_info').html(data);
+        
+        // db에서 유저 호수와 택배 리스트 가져오기
+        axios.get('/output/get_item_list?tracking_num=' + tracking_num)
+        .then(axiosResult => {
+            let item = axiosResult.data.data;
+            console.log(item)
+            let tr = `
+                    <tr>
+                        <td>
+                            <div class="chk-item">
+                                <input type="checkbox" id="chk${item.item_id}" name="item_id" value="${item.item_id}">
+                                <label for="chk${item.item_id}" class="label-cb"></label>
+                            </div>
+                        </td>
+                        <td>${item.delivery_company}</td>
+                        <td>${item.tracking_number}</td>
+                        <td>${item.input_date}</td>
+                    </tr>
+                `;
+            
+            $('#tbody').html(tr);
+        })
+        .catch(err => {
+            console.error(err)
+        });
+    }
 
     $output_request_btn.onclick = e => {
         let $checkboxes = document.getElementsByName("item_id");
@@ -93,6 +128,7 @@
         }
         e.target.closest('form').submit();
     };
+
 
 </script>
 {{end}}
