--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -39,6 +39,8 @@
             axios.get('/input/sense_table_for_item').then(res => {
                 let response = res.data.data
                 console.log(res.data)
+                // **삭제
+                response = 'true'
 
                 // 물품이 없다면 반복실행
                 if(response == 'false'){
