layout header 수정

--- a/webserver/views/layout.html
+++ b/webserver/views/layout.html
@@ -3,7 +3,7 @@
 {{template "head.html" .}}
 <body>
 	<div class="wrap">
-		{{template "header.html" .}}
+		{{template "header" .}}
         <div id="container">
 			{{block "content" .}}{{end}}
         </div>
