plc 완료 응답받기

--- a/webserver/views/input/check_item_info.html
+++ b/webserver/views/input/check_item_info.html
@@ -1,5 +1,5 @@
-{{define "input/check_item_info"}}
-{{template "header" .}}
+{{template "layout.html" .}}
+{{define "content"}}
 
         <main id="main">
             <div class="content-wrap">
