불출 - 비밀번호 재입력 화면 생성

--- a/webserver/views/output/register_address.html
+++ b/webserver/views/output/register_address.html
@@ -15,12 +15,17 @@
     .list-box .list-check .list {
         text-align: center;
         display: flex;
-        gap: 80px;
+        gap: 180px;
 
     }
     .list-box .list-check .list .chk {
         width: 200px;
     }
+    .list-box .list-check .list .chk #address,
+    .list-box .list-check .list .chk #tracking_num {
+        border-color: #0069d9;
+        background: #0069d9;   
+    } 
 
 </style>
 <main id="main">
