--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -51,6 +51,7 @@
             })
             .catch(err => {
                 alert('비밀번호가 올바르지 않습니다.');
+                location.replace('/output/password/mismatch?itemId=' + itemId);
                 console.error(err);
             })
     }
