plc resource 점유 수정

--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -4,7 +4,7 @@
 <main id="main">
     <div class="content-wrap">
         <div class="fixed-btn">
-            <button class="btn-normal"><a href="/">첫 화면으로</a></button>
+            <button class="btn-normal" id="$home_btn"><a href="/">첫 화면으로</a></button>
         </div>
 
         <!-- 정보 오류 -->
@@ -34,7 +34,14 @@
         window.location.replace('/output/password/form?itemId=' + itemId);
     }
 
+    $home_btn.onclick=() => {
+        cancel()
+    }
     $cancel_btn.onclick = () => {
+        cancel()
+    }
+    
+    function cancel(){
         axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
