--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -29,9 +29,9 @@
     let deliveryId = url.searchParams.get("deliveryId");
     let ownerId = url.searchParams.get("ownerId");
     let cancel = false; // 취소 여부
-    let next = true;    // 함수 실행 가능 여부 확인 true : 가능
+    let next = true;    // 함수 실행 가능 여부 확인 true : 가능 - 이 전 동작 완료 시 실행 가능
     let intervalId = setInterval(senseTableForItem, 1000);
-
+    console.log("취소여부:", cancel)
     // 테이블에 택배 있는지 확인
     function senseTableForItem(){
         if(next == true){
@@ -47,6 +47,7 @@
                     console.log("물품 안들어옴")
                     next = true
                 } else{
+                    
                     // 물품이 있다면 inputItem
                     console.log("물품 들어옴")
                     clearInterval(intervalId)
@@ -112,6 +113,7 @@
 
     $('.home_btn').click(function(){
         clearInterval(intervalId);
+        send_stop_info();    // 최초실행
         isItemOnTable = setInterval(send_stop_info, 1000);
     });
 
