홈버튼 수정 및 트레이버퍼 초기 설정

--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -3,7 +3,7 @@
 <main id="main">
     <div class="content-wrap">
         <div class="fixed-btn">
-            <button class="btn-normal home_btn">첫 화면으로</button>
+            <button class="btn-normal"><a href="/">첫 화면으로</a></button>
         </div>
         <!-- 입고 완료 -->
         <div class="msg-wrap">
@@ -38,7 +38,7 @@
             console.log("완료")
             setTimeout(function(){
                 location.href='/';
-            }, 8000);
+            }, 5000);
         
 
     }).catch(err => {
