--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -35,13 +35,13 @@
     }
 
     $home_btn.onclick=() => {
-        cancel()
+        returnItem()
     }
     $cancel_btn.onclick = () => {
-        cancel()
+        returnItem()
     }
     
-    function cancel(){
+    function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
