--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -39,6 +39,10 @@
     const url = new URL(window.location.href);
     const itemId = url.searchParams.get("itemId");
 
+    setTimeout(function () {
+        returnItem();
+    }, 30000);
+    
     $submit_btn.onclick = () => {
         axios.post('/output/password/check', {
             item_id: parseInt(itemId),
@@ -57,15 +61,19 @@
     }
 
     $cancel_btn.onclick = () => {
-        axios.post('/output/return')
+        returnItem();
+        window.location.replace('/')
+    }
+    
+    function returnItem(){
+        axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 console.log(response);
             })
-            .cache(err => {
+            .catch(err => {
                 console.error(err);
-            })
-        window.location.replace('/')
+            });
     }
 
     let input = '$password_input'
