--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -30,15 +30,19 @@
     const url = new URL(window.location.href);
     const itemId = url.searchParams.get("itemId");
 
+    setTimeout(function () {
+        returnItem();
+    }, 15000);
+
     $re_enter_btn.onclick = () => {
         window.location.replace('/output/password/form?itemId=' + itemId);
     }
 
     $home_btn.onclick=() => {
-        returnItem()
+        returnItem();
     }
     $cancel_btn.onclick = () => {
-        returnItem()
+        returnItem();
     }
     
     function returnItem(){
