--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -31,6 +31,7 @@
     let cancel = false; // 취소 여부
     let next = true;    // 함수 실행 가능 여부 확인 true : 가능 - 이 전 동작 완료 시 실행 가능
     let intervalId = setInterval(senseTableForItem, 1000);
+    
     // 테이블에 택배 있는지 확인
     function senseTableForItem(){
         if(next == true){
@@ -111,6 +112,11 @@
         send_stop_info();    // 최초실행
         isItemOnTable = setInterval(send_stop_info, 1000);
     });
+
+    setTimeout(function () {
+        send_stop_info();    // 최초실행
+        isItemOnTable = setInterval(send_stop_info, 1000);
+    }, 15000);
 
 </script>
 {{end}}
