--- a/webserver/views/input/register_delivery.html
+++ b/webserver/views/input/register_delivery.html
@@ -50,6 +50,12 @@
 </style>
         <main id="main">
             <div class="content-wrap">
+                <div class="time-wrap">
+                    <p class="msg">남은시간</p>
+                    <p class="time-count">
+                        <span id="$counter">5</span>
+                    </p>
+                </div>
                 <div class="fixed-btn">
                     <button class="btn-normal home_btn">첫 화면으로</button>
                 </div>
@@ -130,8 +136,23 @@
     </div>
 
 <script>
+    /* 남은 시간 확인 */
+    const timeLimit = 60;
+    let counter = 0;
+    count();
+    let intervalId = setInterval(count, 1000);
+
+    function count(){
+        if (counter > timeLimit) {
+            clearInterval(intervalId);
+            return false;
+        }
+        $counter.innerText = timeLimit - counter;
+        counter += 1;
+    }
+
     setTimeout(function () {
-        send_stop_info();
+        location.href='/';
     }, 60000);
 
     /* 택배 회사 리스트 조회 */
