--- a/webserver/views/output/item_output_confirm.html
+++ b/webserver/views/output/item_output_confirm.html
@@ -3,6 +3,12 @@
 
 <main id="main">
     <div class="content-wrap">
+        <div class="time-wrap">
+            <p class="msg">남은시간</p>
+            <p class="time-count">
+                <span id="$counter">5</span>
+            </p>
+        </div>
         <div class="fixed-btn">
             <button class="btn-normal" id="$home_btn">첫 화면으로</button>
         </div>
@@ -50,6 +56,21 @@
 <script>
     const url = new URL(window.location.href);
     const itemId = url.searchParams.get("itemId");
+
+    /* 남은 시간 확인 */
+    const timeLimit = 5;
+    let counter = 0;
+    count();
+    let intervalId = setInterval(count, 1000);
+
+    function count(){
+        if (counter > timeLimit) {
+            clearInterval(intervalId);
+            return false;
+        }
+        $counter.innerText = timeLimit - counter;
+        counter += 1;
+    }
 
     setTimeout(function () {
         returnItem()
