--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -3,6 +3,12 @@
 
 <main id="main">
     <div class="content-wrap">
+        <div class="time-wrap">
+            <p class="msg">남은시간</p>
+            <p class="time-count">
+                <span id="$counter">5</span>
+            </p>
+        </div>
         <div class="list-box">
             <div class="list-title">비밀번호 입력하거나 입주민 카드를 태그해주세요</div>
             <div class="list-top">
@@ -39,6 +45,20 @@
     const url = new URL(window.location.href);
     const itemId = url.searchParams.get("itemId");
 
+    /* 남은 시간 확인 */
+    const timeLimit = 30;
+    let counter = 0;
+    count();
+    let intervalId = setInterval(count, 1000);
+
+    function count(){
+        if (counter > timeLimit) {
+            clearInterval(intervalId);
+            return false;
+        }
+        $counter.innerText = timeLimit - counter;
+        counter += 1;
+    }
     setTimeout(function () {
         returnItem();
     }, 30000);
