--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -58,17 +58,17 @@
         if(next == true){
             next = false;
             axios.get('/input/sense_table_for_item').then(res => {
-                let response = res.data.data
-                console.log(res.data)
+                let response = res.data.data;
+                console.log(res.data);
                 // 물품이 없다면 반복실행
                 if(response == 'false'){
-                    console.log("물품 안들어옴")
-                    next = true
+                    console.log("물품 안들어옴");
+                    next = true;
                 } else{
                     // 물품이 있다면 inputItem
-                    console.log("물품 들어옴")
-                    clearInterval(intervalId)
-                    inputItem()
+                    console.log("물품 들어옴");
+                    clearInterval(intervalId);
+                    inputItem();
                 }
             }).catch(err => {
                 console.error(err);
@@ -81,7 +81,7 @@
         axios.post(`/input/submit_item?deliveryId=${deliveryId}&ownerId=${ownerId}`).then(axiosResult => {
             let response = axiosResult.data;
             let redirectUrl = `${response.data}?deliveryId=${deliveryId}&ownerId=${ownerId}`;
-            console.log(redirectUrl)
+            console.log(redirectUrl);
             if(cancel == false){
                 location.replace(redirectUrl);
             }
@@ -110,17 +110,17 @@
         if(keep == true){
             keep = false;
             axios.post('/input/stop_input', request).then(res => {
-                let response = res.data.data
-                console.log(res.data)
+                let response = res.data.data;
+                console.log(res.data);
                 // **삭제
-                response = 'false'
+                response = 'false';
                 // 물품이 있다면 반복실행
                 if(response == 'true'){
-                    keep = true
+                    keep = true;
                 } else{
                     // 물품이 없다면 inputItem
-                    clearInterval(isItemOnTable)
-                    location.href='/input/cancel_input_item'
+                    clearInterval(isItemOnTable);
+                    location.href='/input/cancel_input_item';
                 }
             }).catch(err => {
                 console.error(err);
