--- a/webserver/views/input/register_delivery.html
+++ b/webserver/views/input/register_delivery.html
@@ -160,16 +160,16 @@
         .then(res => {
             let delivery_list = res.data.data;
             let list = '';
-            console.log(delivery_list)
+            console.log(delivery_list);
             for (let i = 0; i < delivery_list.length; i++) {
                 list += `
-                <li>
-                    <div class="radio-item">
-                        <input type="radio" id="radio${delivery_list[i].delivery_id}" checked name="radio" value="${delivery_list[i].delivery_id}">
-                        <label for="radio${delivery_list[i].delivery_id}" class="company-name">${delivery_list[i].delivery_company}</label>
-                    </div>
-                </li>            
-            `
+                    <li>
+                        <div class="radio-item">
+                            <input type="radio" id="radio${delivery_list[i].delivery_id}" checked name="radio" value="${delivery_list[i].delivery_id}">
+                            <label for="radio${delivery_list[i].delivery_id}" class="company-name">${delivery_list[i].delivery_company}</label>
+                        </div>
+                    </li>            
+                `;
 
                 $('#delivery_company').html(list);
             }
@@ -206,7 +206,7 @@
         // 수령인 주소 확인
         let axiosResult = await axios.post('/input/check_address', request).catch(err => {
             console.log(err);
-            alert(err.response.data.error)
+            alert(err.response.data.error);
         });
 
         let response = axiosResult.data;
@@ -217,22 +217,21 @@
             document.body.style.overflow = "hidden";
 
             await axios.post('/input/input_delivery_info', request).then(res => {
-                console.log(res.data)
+                console.log(res.data);
                 if(res.data.status === 200){
-                    input = ''
-                    address_list = []
-                    number_list = []
-                    location.replace(res.data.data)
+                    input = '';
+                    address_list = [];
+                    number_list = [];
+                    location.replace(res.data.data);
                 } else{
-                    console.log(res.data.error)
-                    alert(res.data.error)
+                    console.log(res.data.error);
+                    alert(res.data.error);
                 }
             }).catch(err => {
                 modal.style.display = "none";
                 document.body.style.overflow = "auto"; // 스크롤바 보이기
                 console.log(err);
-                alert(err.response.data.error)
-
+                alert(err.response.data.error);
             });
         }
     }
@@ -246,22 +245,22 @@
         axios.post('/input/stop_input', request).then(res => {
             if (res.data.status === 200) {
                 alert('입고가 취소되었습니다.');
-                location.href = '/'
+                location.href = '/';
             } else {
-                console.log(res.data.error)
-                alert(res.data.error)
+                console.log(res.data.error);
+                alert(res.data.error);
                 //location.href='/input/register_delivery_error'
             }
 
         }).catch(err => {
             console.log(err);
-            alert(err.response.data.error)
+            alert(err.response.data.error);
         });
     }
 
     /* 택배사 리스트 팝업 열기 */
     select_company.onclick = () => {
-        document.getElementById("popup_company").style.display = 'block'
+        document.getElementById("popup_company").style.display = 'block';
     };
 
     /* 바코드 찍힐때 이벤트 */
@@ -302,7 +301,7 @@
         company_name = $("input[name=radio]:checked").next().text();
 
         document.getElementById('select_company').value = company_name;
-        document.getElementById("popup_company").style.display = 'none'
+        document.getElementById("popup_company").style.display = 'none';
     };
 
     /* 첫 화면으로 */
@@ -310,7 +309,7 @@
         send_stop_info();
     });
 
-    let input = 'select_address'    // 기본 포커스 주소 input
+    let input = 'select_address';    // 기본 포커스 주소 input
     let address_list = [];
     let number_list = [];
     let tracking_num_list = [];
@@ -318,29 +317,29 @@
     /* 수령인 주소 input 눌렀을때 */
     select_address.onclick = () => {
         $('#select_address').focus();
-        input = $(":focus").attr('id')
+        input = $(":focus").attr('id');
     };
 
     /* 수령인 연락처 input 눌렀을때 */
     select_num.onclick = () => {
         $('#select_num').focus();
-        input = $(":focus").attr('id')
+        input = $(":focus").attr('id');
     };
     /* 송장번호 input 눌렀을때 */
     select_tracking_num.onclick  = () => {
         $('#select_tracking_num').focus();
-        input = $(":focus").attr('id')
+        input = $(":focus").attr('id');
     };
     
     /* 숫자패드 숫자버튼 눌렀을때 */
     $('.number').click(function(){
         number = $(this).attr('value');
         if (input === 'select_address') {
-            address_list.push(number)
+            address_list.push(number);
             let address = address_list.join('');
             document.getElementById("select_address").value = address;
         } else if(input === 'select_num'){
-            number_list.push(number)
+            number_list.push(number);
             phone_num = number_list.join('');
             document.getElementById("select_num").value = phone_num;
         } else if(input == 'select_tracking_num'){
@@ -352,11 +351,11 @@
     /* 숫자패드 뒤로가기 버튼 눌렀을때 */
     backspace.onclick = () => {
         if (input === 'select_address') {
-            address_list.pop()
+            address_list.pop();
             let address = address_list.join('');
             document.getElementById("select_address").value = address;
         } else if(input === 'select_num') {
-            number_list.pop()
+            number_list.pop();
             let phone_num = number_list.join('');
             document.getElementById("select_num").value = phone_num;
         } else if(input === 'select_tracking_num'){
